# owlguard

./: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: test.yml
src/: __init__.py  app.py  config.py  fixer.py  github_api.py  scanner.py
tests/: test_owlguard.py
