[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "owlguard"
version = "0.1.0"
description = "OwlGuard — finds vulnerabilities, writes fixes, creates PRs. Powered by OwlSec + OwlMind."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "MuraveyApp"}]
keywords = ["security", "auto-fix", "github-app", "sast", "devsecops"]
dependencies = [
    "httpx>=0.28",
    "uvicorn>=0.30",
]

[project.scripts]
owlguard = "src.app:main"

[project.urls]
Homepage = "https://owlguard.dev"
